# andros

./: .gitignore  AndrOS user manual.odt  CMakeLists.txt  Makefile  README.md  boot.s  build-helper.sh  grub.cfg  kernel.cpp  linker.ld  log-screenshot.sh  toolchain.cmake  vga_text_kernel.c
blog/: blog.md  decisions.txt  protectedMode.txt
spec/: specification.aux  specification.tex  specification.toc
specification/: ApplicableDocuments.tex  CourseInstructorBananaJacks.tex  CourseInstructorHandsOn.tex  CourseInstructorSafety.tex  CourseInstructorTSlot.tex  CourseInstructorWiring.tex  ECEDesignCost.tex  ECEPedagogy.tex  ECEReplacementCost.tex  FrontMatter.tex  LabInstructorEasyRepair.tex  LabInstructorRobust.tex  LabInstructorSimpleSetup.tex  Scope.tex  SpecTemplate.tex  StakeholderRequirements.tex  StakeholderUserStories  StakeholderUserStories.tex  StudentsAreBusyRobust.tex  StudentsAreBusySetup.tex  StudentsAreBusySimple.tex  VerificationOfRequirements.tex  engineeringRequirements.tex  formatting.tex  system-diagram  system-diagram-as-implemented
src/: KernelTerminal.cpp  KernelTerminal.hpp  KernelTerminalCommands.cpp  System.cpp  System.hpp  boot.hpp  boot.s  increment.s  kernel.cpp
src/.libc/: string.c
src/dev/: cpuIO.hpp  cpuio.hpp  defaultInterrupt.s  interruptSupport.s  interrupts.cpp  interrupts.hpp  isr.s  keyboard.hpp  keyboardISR.s  keyboardScancodes.cpp  keyboardScancodes.hpp  loadIDT.s  pic8259.cpp  pic8259.hpp  testInterrupts.s  x86cpu.hpp  x86cpu.s
src/int/: IDT.hpp
src/libc/: stdlib.c  string.c
src/mem/: GDT.cpp  GDT.hpp  MemoryManager.cpp  MemoryManager.hpp  loadGDT.s  malloc.cpp  memory.cpp  memory.hpp  notes.txt
src/utils/: CircularBuffer.hpp  LinkedList.hpp  byteswap.s  kstring.cpp  kstring.hpp  utils.cpp  utils.hpp
src/video/: ConsoleScreen.hpp  VGATextConsoleScreen.cpp  VGATextConsoleScreen.hpp
unit-tests/: CircularBuffer.cpp  LinkedList.cpp  Makefile  gdt.cpp  itoa.cpp  itoahex.cpp  keyboardScancodes.cpp  kstring_hex_tests.cpp  runTests.sh  strlen.cpp
video/: VGATextConsoleScreen.cpp
(+21 files in other folders)
